# Awesome-HCI-LLM

./: .gitignore  CHANGELOG.md  FIELDS_GUIDE.md  FORMAT_EXAMPLES.md  README.md  README_LIST.md  TODO.md  USAGE.md  batch_add_papers.sh  batch_add_round2.sh  csv2md_table.py  final_normalize.py  normalize_sources.py  papers.csv  pyproject.toml  restore_short_names.py  test_fields.py
paper_cli/: __init__.py  __main__.py  cli.py  config.py
paper_cli/commands/: __init__.py  add.py  list_cmd.py  preview.py  search.py  stats.py  sync.py  topics.py
paper_cli/core/: __init__.py  arxiv_client.py  git_ops.py  markdown.py  models.py  storage.py
paper_cli/core/fetchers/: __init__.py  arxiv.py  crossref.py
paper_cli/utils/: __init__.py  cli_args.py  date.py  display.py  paths.py
src/: README.md  REFACTORING_SUMMARY.md  _legacy_cli_bridge.py  add_arxiv_paper.py  csv2md_table.py  migrate_and_enrich.py  test_arxiv_api.py
tests/: test_add_command.py  test_crossref_fetcher.py  test_date.py  test_markdown_generator.py  test_search_command.py  test_storage_exists.py  test_sync_preview_validation.py
