[project]
name = "paper-cli"
version = "0.1.0"
description = "CLI tool for managing academic paper collections"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "arxiv>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
paper = "paper_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paper_cli"]
